--- a/index.html
+++ b/index.html
@@ -1,9 +1,87 @@
-<html>
-
+<!DOCTYPE html>
+<head>
+  <title>Style Guide</title>
+  <link href="./styles.css" rel="stylesheet" />
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Nunito+Sans:ital,opsz,wght@0,6..12,200..1000;1,6..12,200..1000&family=Space+Mono&display=swap" rel="stylesheet">
+<link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Nunito+Sans:ital,opsz,wght@0,6..12,200..1000;1,6..12,200..1000&family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&family=Space+Mono&display=swap" rel="stylesheet">
+</head>
 <body>
-  <h1>YOUR NAME</h1>
-  <p>Welcome to my website!</p>
-  <img src="https://content.codecademy.com/articles/github-pages-via-web-app/happy-ice-cream.gif" />
+  <header>
+    <h1>My Website Style Guide</h1>
+    <div class="container">
+      <h3>Colors</h3>
+      <ul class="box">
+        <li class="box_blue">
+          <p class="label">Cool Blue</p>
+          <p class="color_hex">#2d5dcc</p>
+        </li>
+        <li class="box_pink">
+          <p class="label_pink">Pink</p>
+          <p class="color_hex">#d957d9</p>
+        </li>
+        <li class="box_green">
+          <p class="label_green">Mint Green</p>
+          <p class="color_hex">#4fe0b0</p>
+        </li> 
+        <li class="box_beige">
+          <p class="label_beige">Beige</p>
+          <p class="color_hex">#efd9ca</p>
+        </li>
+      </ul>
+    </div>
+    <div class="container">
+      <h3>Fonts</h3>
+      <ul class="fonts">
+        <li class="source">
+          <p class="strict">The quick brown fox jumps over the lazy dog.</p>
+          <p class="bold">The quick brown fox jumps over the lazy dog.</p>
+          <p class="italic">The quick brown fox jumps over the lazy dog.</p>
+        </li>
+        <li class="nunito">
+          <p class="strict">The quick brown fox jumps over the lazy dog.</p>
+          <p class="bold">The quick brown fox jumps over the lazy dog.</p>
+          <p class="italic">The quick brown fox jumps over the lazy dog.</p>
+        </li>
+        <li class="poppins">
+          <p class="strict">The quick brown fox jumps over the lazy dog.</p>
+          <p class="bold">The quick brown fox jumps over the lazy dog.</p>
+          <p class="italic">The quick brown fox jumps over the lazy dog.</p>
+        </li> 
+      </ul>
+    </div>
+    <div class="container">
+      <h2>Text Styles</h2>
+      <div class="text-container">
+        <div class="text-panel">
+          <h1>H1: Main page heading</h1>
+          <ul>
+            <li>Font-weight: 700 (bold)</li>
+            <li>Font-size: 26px</li>
+            <li>Font-family: Nunito Sans</li>
+          </ul>
+        </div>
+    </div>
+    <div class="text-panel">
+          <h2>H2: Subheading</h2>
+          <ul>
+            <li>Font-weight: 500</li>
+            <li>Font-size: 18px</li>
+            <li>Font-family: Poppins</li>
+          </ul>
+        </div>
+        <div class="text-panel">
+          <p>P: Paragraph text</p>
+          <ul>
+            <li>Font-weight: 400 (regular)</li>
+            <li>Font-size: 14px</li>
+            <li>Font-family: Poppins</li>
+          </ul>
+        </div>
+    </div>
+  </header>
 </body>
-
-</html>
+<footer></footer>
